--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
           <div class="container">
             <div class="row">
               <div class="col-sm">
-                Acá escribe A
+                Pablo no tiene amigos
               </div>
               <div class="vr"></div>
               <div class="col-sm">
